--- a/templates/index.html
+++ b/templates/index.html
@@ -273,8 +273,8 @@
         <header class="header">
             <h1>Guilene Tiako</h1>
             <p>DevOps Engineer</p>
-            <p>john.doe@example.com</p>
-            <p>Total Experience: 7+ Years</p>
+            <p>guilene@gmail.com</p>
+            <p>Total Experience: 8+ Years</p>
         </header>
 
         <section class="section summary">
