--- a/templates/index.html
+++ b/templates/index.html
@@ -273,7 +273,7 @@
         <header class="header">
             <h1>Guilene Tiako</h1>
             <p>DevOps Engineer</p>
-            <p>guilene@gmail.ca</p>
+            <p>guilene@gmail.co</p>
             <p>Total Experience: 7+ Years</p>
         </header>
 
