--- a/templates/index.html
+++ b/templates/index.html
@@ -278,7 +278,7 @@
         </header>
 
         <section class="section summary">
-            <h2>Professional Summary</h2>
+            <h2>Professional Summar</h2>
             <p>Experienced DevOps Engineer with over 9 years in automating, optimizing, and managing cloud infrastructure. Proficient in Docker, Kubernetes, AWS, Terraform, and bash scripting, with a proven track record of implementing CI/CD pipelines and container orchestration. Skilled in Linux server administration and infrastructure as code, delivering scalable and secure solutions.</p>
         </section>
 
