--- a/templates/index.html
+++ b/templates/index.html
@@ -283,7 +283,7 @@
         </section>
 
         <section class="section">
-            <h2>Education</h2>
+            <h2>Educations</h2>
             <div class="education-item">
                 <strong>B.S. in Computer Science</strong> - University of Tech City<br>
                 <small>2011-2015</small>
